# perl-lsp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dev.sh  hitlist.md  run_e2e.sh  test_e2e_branded_apps.lua
crates/cst/: Cargo.toml
crates/cst/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: document_incremental_pkg_test.rs  lib.rs  module_index.rs  module_resolver.rs  parametric_resultset_tests.rs
crates/model/: Cargo.toml
crates/model/src/: file_analysis.rs  lib.rs  witnesses.rs
demo/: README.md  app.pl  asciinema_drive.sh  demo_init.lua  perl-lsp.cast  perl-lsp.webm  verify.lua
docs/: ROADMAP.md  arc-review-findings.md  arch-review-2026-06.md  cpp-golive-map.md  cpp-qa-log.md  cpp-system-headers.md  gold-roadmap.md  open-problems.md  parser-shortcomings.md  prompt-app-entity.md  prompt-cpp-member-refs.md  prompt-cpp-reparse.md  prompt-cross-project-usability.md  prompt-cst-migration.md  prompt-dbic-as-plugin.md  prompt-enrichment-inheritance-residual.md  prompt-field-projections.md  prompt-flow-narrowing.md  prompt-fluent-accessor-receiver-leak.md  prompt-graph-walking.md  prompt-heatmap.md  prompt-helper-body-inference.md  prompt-long-distance.md  prompt-nested-hashkey.md  prompt-optional-types.md  prompt-parallel-realities.md  prompt-param-typing.md  prompt-parametric-semantics.md  prompt-role-requires.md  prompt-sequence-types.md  prompt-template-arc.md  prompt-type-is-the-gate.md  prompt-type-system-encoding.md  prompt-unify-expr-type-resolution.md  prompt-unify-language-paths.md  qa-design-items.md  qa-findings.md  spike-query-extraction.md  working-bag-residual.md
e2e/: array_hop.lua  core.lua  cpp.lua  cpp_header_edit.lua  cpp_labels.lua  cpp_locals.lua  cpp_macro_calls.lua  cross_file.lua  dbic_parametric.lua  dev_lsp.lua  frameworks.lua  inheritance.lua  init.lua  init_cpp.lua  mojo_events.lua  mojo_plugins.lua  (+4 more)
(+215 files in other folders)
